added date and last updated

--- a/index.html
+++ b/index.html
@@ -4,19 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Jonas Nunn Portal Page</title>
+    <link rel="stylesheet" href="styles/main.css">
 </head>
 <body>
     <header>
-
+        <!-- <img src="images/headshot.jpg" alt="head shot of Jonas Nunn"> -->
+        <h1>Jonas L. Nunn</h1> 
     </header>
 
     <main>
-
+        <h2> WDD230: Assingment Portal</h2> 
+        <p>Lesson 01: <a href="https://codepen.io/jonasnunn/pen/vYayvPz" target="_blank">Date Correction</a> </p> 
+        <p>Lesson 02: </p>
+        <p>Lesson 03: </p>
+        <p>Lesson 04: </p>
+        <p>Lesson 05: </p>
+        <p>Lesson 06: </p>
+        <p>Lesson 07: </p>
+        <p>Lesson 08: </p>
+        <p>Lesson 09: </p>
+        <p>Lesson 10: </p>
+        <p>Lesson 11: </p>
     </main>
 
     <footer>
-        
+        <div></div>
+        <h3></h3>
     </footer>
+<script src="scripts/main.js"></script>
 </body>
 </html>
