--- a/index.html
+++ b/index.html
@@ -9,28 +9,29 @@
 </head>
 <body>
     <header>
-        <!-- <img src="images/headshot.jpg" alt="head shot of Jonas Nunn"> -->
+        <img src="images/headshot.jpg" alt="head shot of Jonas Nunn">
         <h1>Jonas L. Nunn</h1> 
     </header>
 
     <main>
-        <h2> WDD230: Assingment Portal</h2> 
+        <h2> WDD 230: Assingment Portal</h2> 
         <p>Lesson 01: <a href="https://codepen.io/jonasnunn/pen/vYayvPz" target="_blank">Date Correction</a> </p> 
-        <p>Lesson 02: </p>
-        <p>Lesson 03: </p>
-        <p>Lesson 04: </p>
-        <p>Lesson 05: </p>
-        <p>Lesson 06: </p>
-        <p>Lesson 07: </p>
-        <p>Lesson 08: </p>
-        <p>Lesson 09: </p>
-        <p>Lesson 10: </p>
-        <p>Lesson 11: </p>
+        <p>Lesson 02: <a href="" target="_blank">Title </a></p>
+        <p>Lesson 03: <a href="" target="_blank">Title </a></p>
+        <p>Lesson 04: <a href="" target="_blank">Title </a></p>
+        <p>Lesson 05: <a href="" target="_blank">Title </a></p>
+        <p>Lesson 06: <a href="" target="_blank">Title </a></p>
+        <p>Lesson 08: <a href="" target="_blank">Title </a></p>
+        <p>Lesson 07: <a href="" target="_blank">Title </a></p>
+        <p>Lesson 09: <a href="" target="_blank">Title </a></p>
+        <p>Lesson 10: <a href="" target="_blank">Title </a></p>
+        <p>Lesson 11: <a href="" target="_blank">Title </a></p>
+        <h4>Some lessons may need more than one activity/assignment link. </h4>
     </main>
 
     <footer>
-        <div></div>
         <h3></h3>
+        <div></div>
     </footer>
 <script src="scripts/main.js"></script>
 </body>
