--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content ="This is a portal webpage for my WDD230 class assignments.">
     <title>Jonas Nunn Portal Page</title>
     <link rel="stylesheet" href="styles/main.css">
 </head>
@@ -14,7 +15,7 @@
     </header>
 
     <main>
-        <h2> WDD 230: Assingment Portal</h2> 
+        <h2> WDD 230: Assignment Portal</h2> 
         <p>Lesson 01: <a href="https://codepen.io/jonasnunn/pen/vYayvPz" target="_blank">Date Correction</a> </p> 
         <p>Lesson 02: <a href="" target="_blank">Title </a></p>
         <p>Lesson 03: <a href="" target="_blank">Title </a></p>
