--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="images/headshot.jpg" alt="head shot of Jonas Nunn">
+        <img src="images/optimized-headshot.jpg" alt="head shot of Jonas Nunn">
         <h1>Jonas L. Nunn</h1> 
     </header>
 
