--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -9,11 +9,11 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
+<header id="top">
     <nav>
-        <div><a href="./"></a>Home</a></div>
-        <div><a href="/">Personas</a></div>
-        <div><a href="/">Typography</a></div>
+        <div><a href="#top">Home</a></div>
+        <div><a href="#persona">Personas</a></div>
+        <div><a href="#bottom">Typography</a></div>
     </nav>
 </header>
 
@@ -24,6 +24,8 @@
     <img src="images/logo.png" alt="logo">
 
     <p>Target Audience: The target audience is business owners who operate companies in Allen and consumers who want to learn about what the businesses in the community are.</p>
+    
+    <h2 id="persona">Personas</h2>
     <img src="images/oldman.jpg" alt="oldman">
     <p>Persona: CEO Benny's Bagels</p>
     <p>Name: Benny Bagette</p>
@@ -37,7 +39,7 @@
     <p>Purpose: She wants to learn more about what specials or deals local businesses might be having.</p>
 
     <section id="scenarios">
-        <p>Scenarios</p>
+        <p class="subtitle"><b>Scenarios</b></p>
         <p>Scenario 1: A middle aged business man wants to promote a community event his business will be putting on.</p>
         <p>Scenario 2: A job seeking college graduate wants to see what networking events his communnity might be having.</p>
         <p>Scenario 3: A prospective enutrapenur wants to learn about the laws and regulations relateing to businesses.</p>
@@ -45,7 +47,10 @@
         <p>Scenario 5: Someone new in the city wants to learn about the local bussiness.</p>
     </section>
 
-    <p>Color Scheme:</p>
+
+    <h2 id="design">Design</h2>
+    <p id="type"><b>Typography: Roboto</b></p> 
+    <p id="bottom"><b>Color Scheme:</b></p>
 
     <section id="colors">
         <div id="blue"></div>
@@ -55,7 +60,6 @@
         <div id="purple"></div>
     </section>
 
-    <p>Typography:</p> 
 </main>
 
 </body>
