--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h2> WDD 230: Assignment Portal</h2> 
         <p>Lesson 01: <a href="https://codepen.io/jonasnunn/pen/vYayvPz" target="_blank">Date Correction</a> </p> 
         <p>Lesson 02: <a href="lesson2/design-principles.html" target="_blank">Design Principles</a></p>
-        <p>Lesson 03: <a href="" target="_blank">Title </a></p>
+        <p>Lesson 03: <a href="lesson3/index.html" target="_blank">Website Planing Document</a></p>
         <p>Lesson 04: <a href="" target="_blank">Title </a></p>
         <p>Lesson 05: <a href="" target="_blank">Title </a></p>
         <p>Lesson 06: <a href="" target="_blank">Title </a></p>
