finished chamber outline

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -16,10 +16,10 @@
         <nav class="navigation">
             <a class="ham" href="#">&#9776;</a>
             <a href="#">Home</a>
-            <a href="#">Page 1</a>
-            <a href="#">Page 2</a>
-            <a href="#">Page 3</a>
-            <a href="#">Page 4</a>
+            <a href="#">Discover</a>
+            <a href="#">Directory</a>
+            <a href="#">Join</a>
+            <a href="#">Contact</a>
         </nav>
         
     </header>
@@ -61,7 +61,9 @@
     <footer>
         <img src="images/logo.png" alt="Logo">
         <p>210 West McDermott, Allen, TX 75013</p>
-        <a href="https://www.google.com/maps/dir//Allen+Fairview+Chamber+of+Commerce,+210+W+McDermott+Dr,+Allen,+TX+75013/@33.1018571,-96.6741109,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x864c17483482b6cf:0xb47fa161d316d252!2m2!1d-96.6719249!2d33.1018467"></a>
+        <a href="https://www.facebook.com/allenfairviewchamber">Facebook</a>
+        <a href="https://www.instagram.com/allenfairviewchamber/">Instagram</a>
+        <a href="https://www.google.com/maps/dir//Allen+Fairview+Chamber+of+Commerce,+210+W+McDermott+Dr,+Allen,+TX+75013/@33.1018571,-96.6741109,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x864c17483482b6cf:0xb47fa161d316d252!2m2!1d-96.6719249!2d33.1018467">Location</a>
         <p>allenfairviewchamber.com</p>
         <p> (972) 727-5585</p>
         <span id="date"></span>
