--- a/chamber/index.html
+++ b/chamber/index.html
@@ -7,6 +7,7 @@
     <title>Allen Chamber of Commerce</title>
     <script defer src="scripts/main.js"></script>
     <link rel="stylesheet" href="styles/styles.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     <header>
@@ -21,32 +22,50 @@
             <a href="#">Join</a>
             <a href="#">Contact</a>
         </nav>
+        <span id="date-header"></span>
         
     </header>
     <main>
         <section id="hero">
-            <p>Connect with us!</p>
             <img src="images/allen-stadium-aerial.png" alt="Allen Stadium">
+            <p>Welcome to Allen!</p>
+            <span class="button">Join Us</span>
         </section>
 
         <section id="events">
-            <h3>Events</h3>
+            <h4>Grand Opening</h4>
+            <h5>Max's Donuts</h5>
+            <p>Join us for the opening of Max's donuts this saturday at 10:00 am!</p>
         </section>
 
         <section id="weather">
             <h3>Weather</h3>
+            <h4>12&#176F</h4>
+            <p>Cloudy</p>
+            <p>Wind Speed: 5mph</p>
+            <p>Wind Chill: N/A</p>
+
         </section>
 
         <section id="news-release">
             <h3>News</h3>
+            <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis atque dicta labore repudiandae adipisci. Illum, tenetur quia ut rerum a numquam reprehenderit ea dolores voluptate? Consequuntur sunt veniam libero quidem!</p>
         </section>
 
         <section id="spotlight">
             <div id="spot-1">
-                <h3>Spotlight 1</h3>
+                <h3>Ella's Cafe</h3>
+                <img src="images/ellas.jpg" alt="Watter's Creek Landscape">
+                <h4>"Serving quality since 1972"</h4>
+                <p>ellascafe@gmail.com</p>
+                <p>999-999-9999</p>
             </div>
             <div id="spot-2">
-                <h3>Spotlight 2</h3>
+                <h3>Watters Creek Village</h3>
+                <img src="images/watters-3.jpg" alt="Watter's Creek Landscape">
+                <h4>"High Quality, think Watters!"</h4>
+                <p>ellascafe@gmail.com</p>
+                <p>999-999-9999</p>
             </div>
             <div id="spot-3">
                 <h3>Spotlight 3</h3>
@@ -66,7 +85,7 @@
         <a href="https://www.google.com/maps/dir//Allen+Fairview+Chamber+of+Commerce,+210+W+McDermott+Dr,+Allen,+TX+75013/@33.1018571,-96.6741109,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x864c17483482b6cf:0xb47fa161d316d252!2m2!1d-96.6719249!2d33.1018467">Location</a>
         <p>allenfairviewchamber.com</p>
         <p> (972) 727-5585</p>
-        <span id="date"></span>
+        <span id="date-footer"></span>
         <p>WDD 230 Project</p>
         <span id="last-modified"></span>
     </footer>
