added banner & things

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -25,11 +25,14 @@
         <span id="date-header"></span>
         
     </header>
+    <div id="banner">
+        <h3>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</h3>
+    </div>
     <main>
         <section id="hero">
-            <img src="images/allen-stadium-aerial.png" alt="Allen Stadium">
+            <img src="images/town.jpg" alt="Allen Stadium">
             <p>Welcome to Allen!</p>
-            <span class="button">Join Us</span>
+            <button id="id-button">Join Us</button>
         </section>
 
         <section id="events">
