--- a/chamber/index.html
+++ b/chamber/index.html
@@ -38,6 +38,7 @@
         <section id="events">
             <h4>Grand Opening</h4>
             <h5>Max's Donuts</h5>
+            <img src="images/donut.jpg" alt="donut">
             <p>Join us for the opening of Max's donuts this saturday at 10:00 am!</p>
         </section>
 
@@ -71,21 +72,26 @@
                 <p>999-999-9999</p>
             </div>
             <div id="spot-3">
-                <h3>Spotlight 3</h3>
+                <h3>Expensive Smoothie Express</h3>
+                <img src="images/smoothie.jpg" alt="Smoothie">
+                <h4>"Good Smoothies, Higher Prices!"</h4>
+                <p>expsmoothie@gmail.com</p>
+                <p>999-999-9999</p>
+            </div>
             </div>
         </section>
         
         <section id="join">
-            <h3>Join</h3>
+            <button id="join-button">Join Us</button>
+            <p>Discover how to join the chamber of commerce and how it will benefit your organization.</p>
         </section>
     </main>
 
     <footer>
         <img src="images/logo.png" alt="Logo">
-        <p>210 West McDermott, Allen, TX 75013</p>
         <a href="https://www.facebook.com/allenfairviewchamber">Facebook</a>
         <a href="https://www.instagram.com/allenfairviewchamber/">Instagram</a>
-        <a href="https://www.google.com/maps/dir//Allen+Fairview+Chamber+of+Commerce,+210+W+McDermott+Dr,+Allen,+TX+75013/@33.1018571,-96.6741109,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x864c17483482b6cf:0xb47fa161d316d252!2m2!1d-96.6719249!2d33.1018467">Location</a>
+        <a href="https://www.google.com/maps/dir//Allen+Fairview+Chamber+of+Commerce,+210+W+McDermott+Dr,+Allen,+TX+75013/@33.1018571,-96.6741109,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x864c17483482b6cf:0xb47fa161d316d252!2m2!1d-96.6719249!2d33.1018467">210 West McDermott, Allen, TX</a>
         <p>allenfairviewchamber.com</p>
         <p> (972) 727-5585</p>
         <span id="date-footer"></span>
