--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,7 +30,7 @@
     </div>
     <main>
         <section id="hero">
-            <img src="images/town.jpg" alt="Allen Stadium">
+            <img src="images/town_optimized.jpg" alt="Allen Stadium">
             <p>Welcome to Allen!</p>
             <button id="id-button">Join Us</button>
         </section>
@@ -38,7 +38,7 @@
         <section id="events">
             <h4>Grand Opening</h4>
             <h5>Max's Donuts</h5>
-            <img src="images/donut.jpg" alt="donut">
+            <img src="images/donut_optimized.jpg" alt="donut">
             <p>Join us for the opening of Max's donuts this saturday at 10:00 am!</p>
         </section>
 
@@ -59,25 +59,24 @@
         <section id="spotlight">
             <div id="spot-1">
                 <h3>Ella's Cafe</h3>
-                <img src="images/ellas.jpg" alt="Watter's Creek Landscape">
+                <img src="images/ellas_optimized.jpg" alt="Watter's Creek Landscape">
                 <h4>"Serving quality since 1972"</h4>
                 <p>ellascafe@gmail.com</p>
                 <p>999-999-9999</p>
             </div>
             <div id="spot-2">
                 <h3>Watters Creek Village</h3>
-                <img src="images/watters-3.jpg" alt="Watter's Creek Landscape">
+                <img src="images/watters_optimized.jpg" alt="Watter's Creek Landscape">
                 <h4>"High Quality, think Watters!"</h4>
                 <p>ellascafe@gmail.com</p>
                 <p>999-999-9999</p>
             </div>
             <div id="spot-3">
                 <h3>Expensive Smoothie Express</h3>
-                <img src="images/smoothie.jpg" alt="Smoothie">
+                <img src="images/smoothie_optimized.jpg" alt="Smoothie">
                 <h4>"Good Smoothies, Higher Prices!"</h4>
                 <p>expsmoothie@gmail.com</p>
                 <p>999-999-9999</p>
-            </div>
             </div>
         </section>
         
