--- a/chamber/index.html
+++ b/chamber/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo-nowords.png" alt="Allen Logo">
+        <img src="images/logo-nowords.webp" alt="Allen Logo">
         <h1>Allen</h1>
         <h2>Chamber of Commerce</h2>
         <nav class="navigation">
@@ -23,8 +23,8 @@
             <a href="#">Contact</a>
         </nav>
         <span id="date-header"></span>
-        
     </header>
+    
     <div id="banner">
         <h3>🤝🏼 Come join us for the chamber meet and greet Wednesday at 7:00 p.m.</h3>
     </div>
@@ -44,10 +44,10 @@
 
         <section id="weather">
             <h3>Weather</h3>
-            <h4>12&#176F</h4>
+            <h4> <span class="temp">-20</span>&#176;F</h4>
             <p>Cloudy</p>
-            <p>Wind Speed: 5mph</p>
-            <p>Wind Chill: N/A</p>
+            <p>Wind Speed: <span class="wind-speed"3>12.5</span>mph</p>
+            <p>Wind Chill: <span class="wind-chill">N/A</span></p>
 
         </section>
 
@@ -87,7 +87,7 @@
     </main>
 
     <footer>
-        <img src="images/logo.png" alt="Logo">
+        <img src="images/logo.webp" alt="Logo">
         <a href="https://www.facebook.com/allenfairviewchamber">Facebook</a>
         <a href="https://www.instagram.com/allenfairviewchamber/">Instagram</a>
         <a href="https://www.google.com/maps/dir//Allen+Fairview+Chamber+of+Commerce,+210+W+McDermott+Dr,+Allen,+TX+75013/@33.1018571,-96.6741109,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x864c17483482b6cf:0xb47fa161d316d252!2m2!1d-96.6719249!2d33.1018467">210 West McDermott, Allen, TX</a>
