--- a/chamber/index.html
+++ b/chamber/index.html
@@ -30,7 +30,10 @@
     </div>
     <main>
         <section id="hero">
-            <img src="images/town_optimized.jpg" alt="Allen Stadium">
+            <img id="hero-1" src="images/town_optimized.jpg" alt="Allen Stadium">
+            <img id="hero-2" src="images/small.jpg" alt="Allen Stadium">
+            <img id="hero-3" src="images/medium.jpg" alt="Allen Stadium">
+            <img id="hero-4" src="images/city-tall.jpg" alt="Allen Stadium">
             <p>Welcome to Allen!</p>
             <button id="id-button">Join Us</button>
         </section>
