added discover page

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <p>Lesson 02: <a href="lesson2/design-principles.html" target="_blank">Design Principles</a></p>
         <p>Lesson 03: <a href="lesson3/index.html" target="_blank">Website Planing Document</a></p>
         <p>Lesson 04: <a href="chamber/index.html" target="_blank">Chamber Website </a></p>
-        <p>Lesson 05: <a href="" target="_blank">Title </a></p>
+        <p>Lesson 05: <a href="lazyload/lazyload.html" target="_blank">LazyLoad </a></p>
         <p>Lesson 06: <a href="" target="_blank">Title </a></p>
         <p>Lesson 08: <a href="" target="_blank">Title </a></p>
         <p>Lesson 07: <a href="" target="_blank">Title </a></p>
