--- a/chamber/index.html
+++ b/chamber/index.html
@@ -16,8 +16,8 @@
         <h2>Chamber of Commerce</h2>
         <nav class="navigation">
             <a class="ham" href="#">&#9776;</a>
-            <a href="#">Home</a>
-            <a href="#">Discover</a>
+            <a href="index.html">Home</a>
+            <a href="discover.html">Discover</a>
             <a href="#">Directory</a>
             <a href="#">Join</a>
             <a href="#">Contact</a>
@@ -30,10 +30,10 @@
     </div>
     <main>
         <section id="hero">
-            <img id="hero-1" src="images/town_optimized.jpg" alt="Allen Stadium">
-            <img id="hero-2" src="images/small.jpg" alt="Allen Stadium">
-            <img id="hero-3" src="images/medium.jpg" alt="Allen Stadium">
-            <img id="hero-4" src="images/city-tall.jpg" alt="Allen Stadium">
+            <img id="hero-1" src="images/town_optimized.jpg" alt="Big Blue City">
+            <img id="hero-2" src="images/small_800x500.jpg" alt="Small Scenic Village">
+            <img id="hero-3" src="images/medium_1200x600.jpg" alt="Suburbs">
+            <img id="hero-4" src="images/city-tall_1_800x1200.jpg" alt="Big City">
             <p>Welcome to Allen!</p>
             <button id="id-button">Join Us</button>
         </section>
@@ -49,7 +49,7 @@
             <h3>Weather</h3>
             <h4> <span class="temp">-20</span>&#176;F</h4>
             <p>Cloudy</p>
-            <p>Wind Speed: <span class="wind-speed"3>12.5</span>mph</p>
+            <p>Wind Speed: <span class="wind-speed">12.5</span>mph</p>
             <p>Wind Chill: <span class="wind-chill">N/A</span></p>
 
         </section>
