--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <p>Lesson 04: <a href="chamber/index.html" target="_blank">Chamber Website </a></p>
         <p>Lesson 05: <a href="lazyload/lazyload.html" target="_blank">LazyLoad </a></p>
         <p>Lesson 06: <a href="" target="_blank">Title </a></p>
+        <p>Lesson 07: <a href="chamber/discover.html" target="_blank">Discover Page</a></p>
         <p>Lesson 08: <a href="" target="_blank">Title </a></p>
-        <p>Lesson 07: <a href="" target="_blank">Title </a></p>
         <p>Lesson 09: <a href="" target="_blank">Title </a></p>
         <p>Lesson 10: <a href="" target="_blank">Title </a></p>
         <p>Lesson 11: <a href="" target="_blank">Title </a></p>
