--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Allen Chamber of Commerce</title>
+    <title>Discover - Allen Chamber of Commerce</title>
     <script defer src="scripts/main.js"></script>
     <script defer src="scripts/discover.js"></script>
     <link rel="stylesheet" href="styles/styles.css">
@@ -21,7 +21,7 @@
             <a href="index.html">Home</a>
             <a href="discover.html">Discover</a>
             <a href="#">Directory</a>
-            <a href="#">Join</a>
+            <a href="join.html">Join</a>
             <a href="#">Contact</a>
         </nav>
         <span id="date-header"></span>
