--- a/chamber/index.html
+++ b/chamber/index.html
@@ -19,7 +19,7 @@
             <a href="index.html">Home</a>
             <a href="discover.html">Discover</a>
             <a href="#">Directory</a>
-            <a href="#">Join</a>
+            <a href="join.html">Join</a>
             <a href="#">Contact</a>
         </nav>
         <span id="date-header"></span>
