--- a/chamber/join.html
+++ b/chamber/join.html
@@ -7,6 +7,7 @@
     <title>Discover - Allen Chamber of Commerce</title>
     <script defer src="scripts/main.js"></script>
     <script defer src="scripts/discover.js"></script>
+    <script defer src="scripts/join.js"></script>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/join.css">
     <link rel="icon" href="favicon.ico">
@@ -60,9 +61,9 @@
             <label for="four">Level 4</label> 
             </div>
             
-            <label for="message"Business Description:></label>
+            <label for="message">Business Description:</label>
             <textarea id="message"></textarea>
-            <input id="date" type="hidden" name="todaydate">
+            <input id="timeStamp" type="hidden" name="todaydate">
             <input type="submit" value="Join the Chamber">
         </form>
 
