--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p>Lesson 06: <a href="" target="_blank">No Assignment this Week</a></p>
         <p>Lesson 07: <a href="chamber/discover.html" target="_blank">Discover Page</a></p>
         <p>Lesson 08: <a href="lesson8/tablebuild.html" target="_blank">Table Build</a></p>
-        <p>Lesson 09: <a href="lesson9/prophets.html" target="_blank">Title </a></p>
+        <p>Lesson 09: <a href="lesson9/prophets.html" target="_blank">Prophets </a></p>
         <p>Lesson 10: <a href="" target="_blank">Title </a></p>
         <p>Lesson 11: <a href="" target="_blank">Title </a></p>
         <h4>Some lessons may need more than one activity/assignment link. </h4>
