--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -28,5 +28,10 @@
     </header>
 
     <main>
-        <img src="" alt="">
+        <div id="view">
+            <span id="cards-but">&#9783</span>
+            <span id="list-but">&#9868</span>
+        </div>
+        <div class="cards"></div>
+        <table class="table"></table>
     </main>
