--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <p>Lesson 03: <a href="lesson3/index.html" target="_blank">Website Planing Document</a></p>
         <p>Lesson 04: <a href="chamber/index.html" target="_blank">Chamber Website </a></p>
         <p>Lesson 05: <a href="lazyload/lazyload.html" target="_blank">LazyLoad </a></p>
-        <p>Lesson 06: <a href="" target="_blank">No Assignment this Week</a></p>
+        <p>Lesson 06: <a href="data.json" target="_blank">No Assignment this Week</a></p>
         <p>Lesson 07: <a href="chamber/discover.html" target="_blank">Discover Page</a></p>
         <p>Lesson 08: <a href="lesson8/tablebuild.html" target="_blank">Table Build</a></p>
         <p>Lesson 09: <a href="lesson9/prophets.html" target="_blank">Prophets </a></p>
