--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Discover - Allen Chamber of Commerce</title>
-    <script defer src="scripts/main.js"></script>
+    <!-- <script defer src="scripts/main.js"></script> -->
     <script defer src="scripts/dir.js"></script>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/dir.css">
