added dynamic weather

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -47,11 +47,11 @@
 
         <section id="weather">
             <h3>Weather</h3>
-            <h4> <span class="temp">-20</span>&#176;F</h4>
-            <p>Cloudy</p>
-            <p>Wind Speed: <span class="wind-speed">12.5</span>mph</p>
-            <p>Wind Chill: <span class="wind-chill">N/A</span></p>
-
+            <h4> <span id="t"></span>&#176;F</h4>
+            <img id="weather_icon" src="" alt=""/>
+            <p><span id="condition"></span></p>
+            <p>Wind Speed: <span id="ws"></span>mph</p>
+            <p>Wind Chill: <span id="wc">N/A</span></p>
         </section>
 
         <section id="news-release">
