--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -20,7 +20,7 @@
             <a class="ham" href="#">&#9776;</a>
             <a href="index.html">Home</a>
             <a href="discover.html">Discover</a>
-            <a href="#">Directory</a>
+            <a href="directory.html">Directory</a>
             <a href="join.html">Join</a>
             <a href="#">Contact</a>
         </nav>
