fixes and tweaks

--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -22,17 +22,22 @@
             <a href="discover.html">Discover</a>
             <a href="directory.html">Directory</a>
             <a href="join.html">Join</a>
-            <a href="#">Contact</a>
+            <!-- <a href="#">Contact</a> -->
         </nav>
         <span id="date-header"></span>
     </header>
     
     <main>
         <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d1_optimized.webp" alt="Logo">
+        <p class="pclass">Local Businesses hard at work.</p>
         <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d2_optimized.webp" alt="Logo">
+        <p class="pclass">A deer checking out the sights and sounds of the city.</p>
         <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d3_optimized.webp" alt="Logo">
+        <p class="pclass">Some beautiful water of Allen.</p>
         <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d4_optimized.jpg" alt="Logo">
+        <p class="pclass">The oil rigs on a starry night</p>
         <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d5_optimized.jpg" alt="Logo">
+        <p class="pclass">Suburbs</p>
     </main>
     <h2 id="days">Days Since Last Visited: <span id="diff"></span></h2>
     <footer>
