--- a/chamber/index.html
+++ b/chamber/index.html
@@ -20,7 +20,7 @@
             <a href="discover.html">Discover</a>
             <a href="directory.html">Directory</a>
             <a href="join.html">Join</a>
-            <a href="#">Contact</a>
+            <!-- <a href="#">Contact</a> -->
         </nav>
         <span id="date-header"></span>
     </header>
@@ -35,7 +35,7 @@
             <img id="hero-3" src="images/medium_1200x600.jpg" alt="Suburbs">
             <img id="hero-4" src="images/city-tall_1_800x1200.jpg" alt="Big City">
             <p>Welcome to Allen!</p>
-            <button id="id-button">Join Us</button>
+            <button id="id-button" onclick="window.location.href='join.html'">Join Us</button>
         </section>
 
         <section id="events">
@@ -62,7 +62,7 @@
         <section id="spotlight">
             <div id="spot-1">
                 <h3>Ella's Cafe</h3>
-                <img src="images/ellas_optimized.jpg" alt="Watter's Creek Landscape">
+                <img src="images/ellas_optimized.jpg" alt="Picture of Ella's Cafe">
                 <h4>"Serving quality since 1972"</h4>
                 <p>ellascafe@gmail.com</p>
                 <p>999-999-9999</p>
@@ -76,7 +76,7 @@
             </div>
             <div id="spot-3">
                 <h3>Expensive Smoothie Express</h3>
-                <img src="images/smoothie_optimized.jpg" alt="Smoothie">
+                <img src="images/smoothie_optimized.jpg" alt="Picture of smoothie">
                 <h4>"Good Smoothies, Higher Prices!"</h4>
                 <p>expsmoothie@gmail.com</p>
                 <p>999-999-9999</p>
@@ -84,7 +84,7 @@
         </section>
         
         <section id="join">
-            <button id="join-button">Join Us</button>
+            <button id="join-button" onclick="window.location.href='join.html'">Join Us</button>
             <p>Discover how to join the chamber of commerce and how it will benefit your organization.</p>
         </section>
     </main>
