--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -7,6 +7,6 @@
     <title>Thank you!</title>
 </head>
 <body>
-    <h1>Thanks you for filling out our carefully crafted and extremely important from! We promise out emails will be persistent in attempting to inform you of everything going on it the community</h1>
+    <h1>Thanks you for filling out our carefully crafted and extremely important from! We promise our emails will be persistent in attempting to inform you of everything going on it the community</h1>
 </body>
 </html>
