--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -22,7 +22,7 @@
             <a href="discover.html">Discover</a>
             <a href="directory.html">Directory</a>
             <a href="join.html">Join</a>
-            <a href="#">Contact</a>
+            <!-- <a href="#">Contact</a> -->
         </nav>
         <span id="date-header"></span>
     </header>
