worked on join button

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -34,6 +34,8 @@
             <img id="hero-2" src="images/small_800x500.jpg" alt="Small Scenic Village">
             <img id="hero-3" src="images/medium_1200x600.jpg" alt="Suburbs">
             <img id="hero-4" src="images/city-tall_1_800x1200.jpg" alt="Big City">
+            <img id="hero-5" src="images/large.jpg" alt="Big Blue City">
+
             <p>Welcome to Allen!</p>
             <button id="id-button" onclick="window.location.href='join.html'">Join Us</button>
         </section>
