lots of fixes to home and the footer

--- a/chamber/index.html
+++ b/chamber/index.html
@@ -49,8 +49,8 @@
 
         <section id="weather">
             <h3>Weather</h3>
-            <h4> <span id="t"></span>&#176;F</h4>
             <img id="weather_icon" src="" alt=""/>
+            <h4> <span id="t"></span>&#176;F</h4>
             <p><span id="condition"></span></p>
             <p>Wind Speed: <span id="ws"></span>mph</p>
             <p>Wind Chill: <span id="wc">N/A</span></p>
@@ -93,14 +93,16 @@
 
     <footer>
         <img src="images/logo.webp" alt="Logo">
-        <a href="https://www.facebook.com/allenfairviewchamber">Facebook</a>
-        <a href="https://www.instagram.com/allenfairviewchamber/">Instagram</a>
-        <a href="https://www.google.com/maps/dir//Allen+Fairview+Chamber+of+Commerce,+210+W+McDermott+Dr,+Allen,+TX+75013/@33.1018571,-96.6741109,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x864c17483482b6cf:0xb47fa161d316d252!2m2!1d-96.6719249!2d33.1018467">210 West McDermott, Allen, TX</a>
-        <p>allenfairviewchamber.com</p>
-        <p> (972) 727-5585</p>
-        <span id="date-footer"></span>
-        <p>WDD 230 Project</p>
-        <span id="last-modified"></span>
+        <div id="footer-content">
+            <a href="https://www.facebook.com/allenfairviewchamber">Facebook</a>
+            <a href="https://www.instagram.com/allenfairviewchamber/">Instagram</a>
+            <a href="https://www.google.com/maps/dir//Allen+Fairview+Chamber+of+Commerce,+210+W+McDermott+Dr,+Allen,+TX+75013/@33.1018571,-96.6741109,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x864c17483482b6cf:0xb47fa161d316d252!2m2!1d-96.6719249!2d33.1018467">210 West McDermott, Allen, TX</a>
+            <p>allenfairviewchamber.com</p>
+            <p> (972) 727-5585</p>
+            <span id="date-footer"></span>
+            <!-- <p>WDD 230 Project</p> -->
+            <span id="last-modified"></span>
+        </div>
     </footer>
 </body>
 </html>
