--- a/chamber/index.html
+++ b/chamber/index.html
@@ -93,6 +93,7 @@
 
     <footer>
         <img src="images/logo.webp" alt="Logo">
+        <img id="logo-2" src="images/logo.webp" alt="Logo">
         <div id="footer-content">
             <a href="https://www.facebook.com/allenfairviewchamber">Facebook</a>
             <a href="https://www.instagram.com/allenfairviewchamber/">Instagram</a>
@@ -104,5 +105,6 @@
             <span id="last-modified"></span>
         </div>
     </footer>
+    
 </body>
 </html>
