--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -7,6 +7,7 @@
     <title>Discover - Allen Chamber of Commerce</title>
     <!-- <script defer src="scripts/main.js"></script> -->
     <script defer src="scripts/dir.js"></script>
+    <script defer src="scripts/main.js"></script>
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="stylesheet" href="styles/dir.css">
     <link rel="icon" href="favicon.ico">
