--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -28,25 +28,25 @@
     </header>
     
     <main>
-        <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d1_optimized.webp" alt="Logo">
+        <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d1_optimized.webp" alt="Lazy Load Image">
         <p class="pclass">Local Businesses hard at work.</p>
-        <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d2_optimized.webp" alt="Logo">
+        <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d2_optimized.webp" alt="Lazy Load Image">
         <p class="pclass">A deer checking out the sights and sounds of the city.</p>
-        <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d3_optimized.webp" alt="Logo">
+        <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d3_optimized.webp" alt="Lazy Load Image">
         <p class="pclass">Some beautiful water of Allen.</p>
-        <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d4_optimized.jpg" alt="Logo">
+        <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d4_optimized.jpg" alt="Lazy Load Image">
         <p class="pclass">The oil rigs on a starry night</p>
-        <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d5_optimized.jpg" alt="Logo">
+        <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d5_optimized.jpg" alt="Lazy Load Image">
         <p class="pclass">Suburbs</p>
     </main>
     <h2 id="days">Days Since Last Visited: <span id="diff"></span></h2>
     <footer>
         <img src="images/logo.webp" alt="Logo">
-        <img id="logo-2" src="images/logo.webp" alt="Logo">
+        <img id="logo-2" src="images/logo.webp" alt="Logo-2">
         <div id="footer-content">
-            <a href="https://www.facebook.com/allenfairviewchamber">Facebook</a>
-            <a href="https://www.instagram.com/allenfairviewchamber/">Instagram</a>
-            <a href="https://www.google.com/maps/dir//Allen+Fairview+Chamber+of+Commerce,+210+W+McDermott+Dr,+Allen,+TX+75013/@33.1018571,-96.6741109,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x864c17483482b6cf:0xb47fa161d316d252!2m2!1d-96.6719249!2d33.1018467">210 West McDermott, Allen, TX</a>
+            <a href="https://www.facebook.com/allenfairviewchamber" target="_blank">Facebook</a>
+            <a href="https://www.instagram.com/allenfairviewchamber/" target="_blank">Instagram</a>
+            <a href="https://www.google.com/maps/dir//Allen+Fairview+Chamber+of+Commerce,+210+W+McDermott+Dr,+Allen,+TX+75013/@33.1018571,-96.6741109,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x864c17483482b6cf:0xb47fa161d316d252!2m2!1d-96.6719249!2d33.1018467" target="_blank">210 West McDermott, Allen, TX</a>
             <p>allenfairviewchamber.com</p>
             <p> (972) 727-5585</p>
             <span id="date-footer"></span>
