--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -15,8 +15,8 @@
 <body>
     <header>
         <img src="images/logo-nowords.webp" alt="Allen Logo">
-        <h1>Allen</h1>
-        <h2>Chamber of Commerce</h2>
+        <h1 id="head-h1">Allen</h1>
+        <h2 id="head-h2">Chamber of Commerce</h2>
         <nav class="navigation">
             <a class="ham" href="#">&#9776;</a>
             <a href="index.html">Home</a>
@@ -39,11 +39,11 @@
 
     <footer>
         <img src="images/logo.webp" alt="Logo">
-        <img id="logo-2" src="images/logo.webp" alt="Logo">
+        <img id="logo-2" src="images/logo.webp" alt="Logo-2">
         <div id="footer-content">
-            <a href="https://www.facebook.com/allenfairviewchamber">Facebook</a>
-            <a href="https://www.instagram.com/allenfairviewchamber/">Instagram</a>
-            <a href="https://www.google.com/maps/dir//Allen+Fairview+Chamber+of+Commerce,+210+W+McDermott+Dr,+Allen,+TX+75013/@33.1018571,-96.6741109,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x864c17483482b6cf:0xb47fa161d316d252!2m2!1d-96.6719249!2d33.1018467">210 West McDermott, Allen, TX</a>
+            <a href="https://www.facebook.com/allenfairviewchamber" target="_blank">Facebook</a>
+            <a href="https://www.instagram.com/allenfairviewchamber/" target="_blank">Instagram</a>
+            <a href="https://www.google.com/maps/dir//Allen+Fairview+Chamber+of+Commerce,+210+W+McDermott+Dr,+Allen,+TX+75013/@33.1018571,-96.6741109,17z/data=!4m8!4m7!1m0!1m5!1m1!1s0x864c17483482b6cf:0xb47fa161d316d252!2m2!1d-96.6719249!2d33.1018467" target="_blank">210 West McDermott, Allen, TX</a>
             <p>allenfairviewchamber.com</p>
             <p> (972) 727-5585</p>
             <span id="date-footer"></span>
