--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -38,6 +38,8 @@
     </main>
 
     <footer>
+        <!-- <a href="index.html"><img src="images/logo.webp" alt="Logo"></a> -->
+        <!-- <a href="index.html"><img id="logo-2" src="images/logo.webp" alt="Logo-2"></a> -->
         <img src="images/logo.webp" alt="Logo">
         <img id="logo-2" src="images/logo.webp" alt="Logo-2">
         <div id="footer-content">
