--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Discover - Allen Chamber of Commerce</title>
+    <title>Directory - Allen Chamber of Commerce</title>
     <!-- <script defer src="scripts/main.js"></script> -->
     <script defer src="scripts/dir.js"></script>
     <script defer src="scripts/main.js"></script>
@@ -30,8 +30,8 @@
 
     <main>
         <div id="view">
-            <span id="cards-but">&#9783</span>
-            <span id="list-but">&#9868</span>
+            <span id="cards-but">&#9783;</span>
+            <span id="list-but">&#9868;</span>
         </div>
         <div class="cards"></div>
         <table class="table"></table>
