--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -28,16 +28,26 @@
     </header>
     
     <main>
-        <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d1_optimized.webp" alt="Lazy Load Image">
-        <p class="pclass">Local Businesses hard at work.</p>
-        <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d2_optimized.webp" alt="Lazy Load Image">
-        <p class="pclass">A deer checking out the sights and sounds of the city.</p>
-        <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d3_optimized.webp" alt="Lazy Load Image">
-        <p class="pclass">Some beautiful water of Allen.</p>
-        <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d4_optimized.jpg" alt="Lazy Load Image">
-        <p class="pclass">The oil rigs on a starry night</p>
-        <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d5_optimized.jpg" alt="Lazy Load Image">
-        <p class="pclass">Suburbs</p>
+        <section>
+            <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d1_optimized.webp" alt="Lazy Load Image">
+            <p class="pclass">Local Businesses hard at work.</p>
+        </section>
+        <section>
+            <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d2_optimized.webp" alt="Lazy Load Image">
+            <p class="pclass">A deer checking out the sights and sounds of the city.</p>
+        </section>
+        <section>
+            <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d3_optimized.webp" alt="Lazy Load Image">
+            <p class="pclass">Some beautiful water of Allen.</p>
+        </section>
+        <section>
+            <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d4_optimized.jpg" alt="Lazy Load Image">
+            <p class="pclass">The oil rigs on a starry night</p>
+        </section>
+        <section>
+            <img src="https://dummyimage.com/300x400/ccc/fff" data-src="images/d5_optimized.jpg" alt="Lazy Load Image">
+            <p class="pclass">Suburbs</p>
+        </section>
     </main>
     <h2 id="days">Days Since Last Visited: <span id="diff"></span></h2>
     <footer>
