--- a/chamber/join.html
+++ b/chamber/join.html
@@ -49,15 +49,15 @@
             <label for="business">Business Name</label>
             <input id="business" name="bizname" required>
             
-            <label for="member">Membership Level</label>
+            <label>Membership Level</label>
             <div id="radio">
-            <input id="member" id="one" name="mlevel" type="radio">
+            <input id="one" name="mlevel" type="radio">
             <label for="one">Level:1</label> 
-            <input id="member" id="two" name="mlevel" type="radio">
+            <input id="two" name="mlevel" type="radio">
             <label for="two">Level:2</label> 
-            <input id="member" id="three" name="mlevel" type="radio">
+            <input id="three" name="mlevel" type="radio">
             <label for="three">Level:3</label> 
-            <input id="member" id="four" name="mlevel" type="radio">
+            <input id="four" name="mlevel" type="radio">
             <label for="four">Level:4</label> 
             </div>
             
