--- a/chamber/thankyou.html
+++ b/chamber/thankyou.html
@@ -5,8 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thank you!</title>
+    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/thank.css">
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
-    <h1>Thanks you for filling out our carefully crafted and extremely important from! We promise our emails will be persistent in attempting to inform you of everything going on it the community</h1>
+    <header>
+        <img src="images/logo-nowords.webp" alt="Allen Logo">
+        <h1>Allen</h1>
+        <h2>Chamber of Commerce</h2>
+        <nav class="navigation">
+            <a class="ham" href="#">&#9776;</a>
+            <a href="index.html">Home</a>
+            <a href="discover.html">Discover</a>
+            <a href="directory.html">Directory</a>
+            <a href="join.html">Join</a>
+            <!-- <a href="#">Contact</a> -->
+        </nav>
+        <span id="date-header"></span>
+    </header>
+
+    <h1 id="h1">Thank you for filling out our form! We promise our emails will be persistent in attempting to inform you of everything going on it the community!</h1>
 </body>
 </html>
