--- a/chamber/index.html
+++ b/chamber/index.html
@@ -49,7 +49,7 @@
 
         <section id="weather">
             <h3>Weather</h3>
-            <img id="weather_icon" src="placeholder" alt="Weather Icon"/>
+            <img id="weather_icon" src="https://dummyimage.com/100x100/ccc/fff" alt="Weather Icon"/>
             <h4> <span id="t"></span>&#176;F</h4>
             <p><span id="condition"></span></p>
             <p>Wind Speed: <span id="ws"></span>mph</p>
