--- a/bountiful/about.html
+++ b/bountiful/about.html
@@ -18,5 +18,15 @@
         </nav>
     </header>
 
+
+    <main>
+        Our company was founded by a group of health-conscious individuals who were passionate about the benefits of organic fruits and vegetables. We noticed a lack of convenient, on-the-go options for people who wanted to incorporate more organic produce into their diets, so we decided to create a line of organic fruit smoothies.
+
+We started small, sourcing the freshest organic fruits from local farmers and experimenting with different flavor combinations in our kitchen. After many taste tests and recipe tweaks, we landed on a line of delicious smoothies that were packed with nutrition and flavor.
+
+As word spread about our organic fruit smoothies, we quickly gained a loyal following of health-conscious consumers who appreciated our commitment to using only the best organic ingredients. We expanded our operations and started distributing our smoothies to local cafes, health food stores, and gyms.
+
+Today, we are proud to offer a wide variety of organic fruit smoothies that are not only delicious but also provide a convenient and healthy way for people to get their daily dose of fruits and vegetables. We are committed to promoting health and sustainability through our products and hope to continue expanding our reach in the years to come.
+    </main>
 </body>
 </html>
