--- a/bountiful/index.html
+++ b/bountiful/index.html
@@ -14,7 +14,7 @@
 
     <img id="logo-img" src="images/logo-500x300.png" alt="Bountiful Foods Logo">
 
-    <nav>
+    <nav id="nav">
         <a href="index.html">Home</a>
         <a href="fresh.html">Fresh</a>
         <a href="about.html">About Us</a>
@@ -22,15 +22,34 @@
     </nav>
 
     <a id="nearest-store" href=index.html"><h3>Find Nearest Store</h3></a>
-
-    
+    <a id="ham-icon" href="#">&#9776;</a>
 </header>
 
 <main>
     <section id="hero">
-        <img id="hero-img" src="images/fruit-hero.jpg" alt="Various Fruits">
-        <button id="hero-button" onclick="window.location.href='fresh.html'">Design Your Drink</button>
+        
+        <img id="img" class="smoothies" src="images/smoothie-1.jpg" alt="Various Fruits">
+        <img id="img" class="smoothies"src="images/smoothie-3.jpg" alt="Various Fruits">
+        <img id="img" class="smoothies"src="images/smoothie-4.jpg" alt="Various Fruits">
+        <img id="img" class="smoothies"src="images/mango-smoothie.jpg" alt="Various Fruits">
+        <img id="hero-img" src="images/smoothie-2.jpg" alt="Various Fruits">
+        <button id="hero-button" onclick="window.location.href='fresh.html'">Design Your Drink!</button>
     </section>
+
+    <div id="cali">
+        <h1>Naturally grown, locally sourced, delicious.</h1>
+        <p>We are proud to offer a wide selection of premium quality organic fruit, grown right here in Carlsbad, California. Our fruit is handpicked and carefully selected to ensure that you receive only the freshest and most flavorful produce. What makes our fruit so special is the combination of Carlsbad's perfect Mediterranean climate and our commitment to organic farming practices. Our farmers prioritize soil health, biodiversity, and sustainability, resulting in healthier and tastier produce that is free of harmful chemicals. By choosing our organic fruit, you can be assured that you are making a healthy and sustainable choice for you and the environment. Plus, by supporting our local farmers, you are contributing to the local economy and reducing the carbon footprint associated with importing produce from far-flung regions. Visit us today and taste the difference that organic fruit grown in Carlsbad, California can make!</p>
+    </div>
+
+    <div id="weather">
+        <h2>Weather Forecast</h3>
+        <img id="weather_icon" src="https://dummyimage.com/100x100/ccc/fff" alt="Weather Icon"/>
+        <h4> <span id="t"></span>&#176;F</h4>
+        <p><span id="condition"></span></p>
+        <p>Wind Speed: <span id="ws"></span>mph</p>
+        <p>Wind Chill: <span id="wc">N/A</span></p>
+    </div>  
+
 </main>
 
 <footer>
