--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <p>Lesson 08: <a href="lesson8/tablebuild.html" target="_blank">Table Build</a></p>
         <p>Lesson 09: <a href="lesson9/prophets.html" target="_blank">Prophets </a></p>
         <p>Lesson 10: <a href="lesson10/weather.html" target="_blank">Weather</a></p>
-        <p>Lesson 11: <a href="" target="_blank">Title </a></p>
+        <p>Lesson 12: <a href="bountiful-plan/index.html" target="_blank">Bountiful Foods Site Plan </a></p>
         <h4>Some lessons may need more than one activity/assignment link. </h4>
     </main>
 
