--- a/bountiful/index.html
+++ b/bountiful/index.html
@@ -7,6 +7,7 @@
     <title>Bountiful Foods</title>
     <link rel="stylesheet" href="styles/main.css">
     <script defer src="scripts/main.js"></script>
+    <link rel="icon" href="favicon.ico">
 </head>
 <body>
     
@@ -37,8 +38,10 @@
     </section>
 
     <div id="cali">
-        <h1>Naturally grown, locally sourced, delicious.</h1>
-        <p>We are proud to offer a wide selection of premium quality organic fruit, grown right here in Carlsbad, California. Our fruit is handpicked and carefully selected to ensure that you receive only the freshest and most flavorful produce. What makes our fruit so special is the combination of Carlsbad's perfect Mediterranean climate and our commitment to organic farming practices. Our farmers prioritize soil health, biodiversity, and sustainability, resulting in healthier and tastier produce that is free of harmful chemicals. By choosing our organic fruit, you can be assured that you are making a healthy and sustainable choice for you and the environment. Plus, by supporting our local farmers, you are contributing to the local economy and reducing the carbon footprint associated with importing produce from far-flung regions. Visit us today and taste the difference that organic fruit grown in Carlsbad, California can make!</p>
+        <h1>Naturally grown</h1>
+        <p>Our farmers prioritize soil health, biodiversity, and sustainability, resulting in healthier and tastier produce that is free of harmful chemicals. By choosing our organic fruit, you can be assured that you are making a healthy and sustainable choice for you and the environment. Plus, by supporting our local farmers, you are contributing to the local economy and reducing the carbon footprint associated with importing produce from far-flung regions.</p>
+        <h1>Locally sourced</h1>
+        <p>We are proud to offer a wide selection of premium quality organic fruit, grown right here in Carlsbad, California. Our fruit is handpicked and carefully selected to ensure that you receive only the freshest and most flavorful produce. What makes our fruit so special is the combination of Carlsbad's perfect Mediterranean climate and our commitment to organic farming practices.</p>
     </div>
 
     <section id="weather">
@@ -51,8 +54,8 @@
             <p>High: <span id="maxt"></span>&#176;F</p>
             <p>Low: <span id="mint"></span>&#176;F</p>
             <p>Humidity: <span id="hum"></span>%</p>
-            <p>Wind Speed: <span id="ws"></span>mph</p>
-            <p>Wind Chill: <span id="wc">N/A</span></p>
+            <!-- <p>Wind Speed: <span id="ws"></span>mph</p>
+            <p>Wind Chill: <span id="wc">N/A</span></p> -->
         </div>
 
         <div id="weather-1">
@@ -64,7 +67,7 @@
         </div>
 
         <div id="weather-2">
-            <h3>Day 3</h3>
+            <h3>Overmorrow</h3>
             <img id="weather_icon2" src="https://dummyimage.com/100x100/ccc/fff" alt="Weather Icon"/>
             <p><span id="condition2"></span></p>
             <p>High: <span id="maxt2"></span>&#176;F</p>
