--- a/bountiful/index.html
+++ b/bountiful/index.html
@@ -18,12 +18,18 @@
     <nav id="nav">
         <a href="index.html">Home</a>
         <a href="fresh.html">Fresh</a>
-        <a href="about.html">About Us</a>
-        
+        <a href="about.html">About Us</a> 
     </nav>
 
-    <a id="nearest-store" href=index.html"><h3>Find Nearest Store</h3></a>
+    <a id="nearest-store" href="index.html"><h3>Find Nearest Store</h3></a>
     <a id="ham-icon" href="#">&#9776;</a>
+
+    <div id="mobile-menu">
+        <a href="index.html">Home</a>
+        <a href="fresh.html">Fresh</a>
+        <a href="about.html">About Us</a>
+        <a id="nearest-store" href="index.html">Find Store</a>
+    </div>
 </header>
 
 <main>
