--- a/sandbox/index.html
+++ b/sandbox/index.html
@@ -4,11 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BootStrap Example</title>
+    <title>Example</title>
+    <link rel="stylesheet" href="css.css">
 </head>
 <body>
     <main>
-        <h1>Example</h1>
+        <div>
+        <p>Example Text</p>
+        </div>
     </main>
 </body>
 </html>
