--- a/bountiful/index.html
+++ b/bountiful/index.html
@@ -80,6 +80,10 @@
             <p>Low: <span id="mint2"></span>&#176;F</p>
         </div>
     </section>
+
+    <div>
+        <h3>You have mixed <span id="drinks"></span> drinks</h3>
+    </div>
 </main>
 
 <footer>
